fix: replace commons-lang3 StringUtils with JDK equivalents in ojp-server
The previous PR (3bbb92f) intentionally omitted commons-lang3 from the
ojp-server dependencies so it would not be bundled into the shaded JAR.
The previous fix attempt incorrectly re-added the dependency.

Instead, replace all StringUtils usages across 11 server source files
with JDK equivalents available since Java 11 (server targets Java 25):
- StringUtils.EMPTY           -> ""
- StringUtils.isBlank(x)      -> x.isBlank()
- StringUtils.isNotBlank(x)   -> !x.isBlank()
- StringUtils.isEmpty(x)      -> x.isEmpty()
- StringUtils.isNotEmpty(x)   -> !x.isEmpty()
- StringUtils.isNoneBlank(x)  -> !x.isBlank()

For Map.get() and JDBC metadata results that may return null, the
null-safe form (x != null && !x.isEmpty()) is used.
Proto-generated getters never return null so direct .isEmpty()/.isBlank()
is safe for all gRPC field accessors.